# rust_class

./: Cargo.toml
assignments/assignment-conditions/: Cargo.toml
assignments/get-request/: Cargo.toml
box-items/: Cargo.toml
box-items/src/: main.rs
change_data/: Cargo.toml
change_data/src/: lib.rs
chunks_mutex/: Cargo.toml
chunks_mutex/src/: main.rs
closures/src/: main.rs
collections/: Cargo.toml
collections/src/: main.rs  struct.rs
common_vectors/: Cargo.toml
common_vectors/src/: main.rs
conditions/src/: main.rs
databases/: Cargo.toml
dt-exercise/: Cargo.toml
dt-exercise/src/: lib.rs
exercises/src/: exercise_2.rs  main.rs
genercs/: Cargo.toml
genercs/src/: main.rs
higher_order/: Cargo.toml
higher_order/src/: main.rs
lifetimes/src/: main.rs
loops/: Cargo.toml
loops/src/: main  main.rs
macros/: Cargo.toml
macros/src/: main.rs
modules/: Cargo.toml
modules-assignment/src/: main.rs  mammals.rs
modules/src/: area.rs  main.rs  mammals.rs  product.rs
more_databases/: .env  Cargo.toml  diesel.toml  loans_backup.dump
more_databases/migrations/2024-07-21-192319_users/: up.sql
more_databases/migrations/2024-07-21-192412_loans/: down.sql  up.sql
more_databases/src/: db-http.rs  main.rs  schema.rs
more_databases/src/models/: loans.rs  users.rs
more_databases/src/static/: welcome.html
mylibrary/: Cargo.toml
mylibrary/src/: lib.rs
ownership/src/: main.rs
rc_refcell/src/: main.rs
references/src/: main.rs
shop_management/: Cargo.toml
src/: assignment-conditions.rs  main.rs
vector_order/: Cargo.toml
(+15 files in other folders)
