[package]
name = "loans"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenvy = "0.15.7"
dotenv = "0.15.0"
chrono = {version = "0.4.38", features = ["serde"]}
actix-web = "4.0"
actix-session = { version = "0.6", features = ["cookie-session"] }
actix-files = "0.6.6"
actix-web-lab ="0.20.2"
async-stream = "0.3"
serde_json = "1.0"
env_logger = "0.11.3"
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"], default-features = false }
bcrypt = "0.11"
[dependencies.syn]
version = "1.0"
features = ["derive", "parsing", "full"]
[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
